--- a/eat.html
+++ b/eat.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- navigation -->
     <section>
         <header>
             <nav>
@@ -33,12 +34,14 @@
                     </li>
                 </ul>
             </nav>
+            <!-- website logo -->
             <a href="index.html" id="love-edinburgh">
                 <h1>Love Edinburgh</h1>
             </a>
         </header>
     </section>
-    `<section>
+<!-- main content of eat+drink page -->
+    <section>
         <h3 id="eat-heading">Food and drink in Edinburgh</h3>
         <div id="food-container">
             <img id="champagne-img" src="assets/images/champagne.jpg" alt="Girls drinking champagne on a night out">
@@ -61,6 +64,7 @@
         </div>
         </div>
     </section>
+    <!-- footer with social media links -->
     <footer class="social-media">
         <h3 id="footer-text">Catch us on social media for more info on events and offers</h3>
         <ul>
@@ -81,6 +85,7 @@
             </li>
         </ul>
     </footer>
+    <!-- font awesome scripts -->
     <script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
 </body>
 
