--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <section>
         <header>
+            <!-- navigation -->
             <nav>
                 <ul id="menu">
                     <li>
@@ -33,11 +34,13 @@
                     </li>
                 </ul>
             </nav>
+            <!-- website logo -->
             <a href="index.html" id="love-edinburgh">
                 <h1>Love Edinburgh</h1>
             </a>
         </header>
     </section>
+    <!-- main content of home page -->
     <section id="hero-outer">
         <div id="hero-image" role="img" aria-label="View of Edinburgh with clock tower in sight">
             <div id="intro-text">
@@ -50,11 +53,13 @@
             </div>
         </div>
     </section>
+    <!-- welcome video -->
     <div id="welcome-video">
         <iframe width="1223" height="688" src="https://www.youtube.com/embed/SRNyfBRhq0A" title="Edinburgh in 4K"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
     </div>
+    <!-- footer containg social media links -->
     <footer class="social-media">
         <h3>Catch us on social media for more info on events and offers</h3>
         <ul>
@@ -75,6 +80,7 @@
             </li>
         </ul>
     </footer>
+    <!-- font awesome scripts -->
     <script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
 </body>
 
