--- a/newsletter.html
+++ b/newsletter.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- navigation -->
     <section>
         <header>
             <nav>
@@ -33,11 +34,13 @@
                     </li>
                 </ul>
             </nav>
+            <!-- website logo -->
             <a href="index.html" id="love-edinburgh">
                 <h1>Love Edinburgh</h1>
             </a>
         </header>
     </section>
+    <!-- newsletter sign up form -->
     <section>
         <div id="form-image" role="img" aria-label="View of concernt stage from the perspective of a member of the audience">
             <div id="form-text-container">
@@ -64,6 +67,7 @@
             </div>
         </div>
     </section>
+    <!-- footer containing social media links -->
     <footer class="social-media">
         <h3>Catch us on social media for more info on events and offers</h3>
         <ul>
@@ -84,6 +88,7 @@
             </li>
         </ul>
     </footer>
+    <!-- font awesome scripts -->
     <script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
 </body>
 
