--- a/todo.html
+++ b/todo.html
@@ -14,6 +14,7 @@
 <body>
     <section>
         <header>
+            <!-- navigation -->
             <nav>
                 <ul id="menu">
                     <li>
@@ -33,6 +34,7 @@
                     </li>
                 </ul>
             </nav>
+            <!-- website logo -->
             <a href="index.html" id="love-edinburgh">
                 <h1>Love Edinburgh</h1>
             </a>
@@ -41,6 +43,7 @@
     <h3 id="events-heading">
         Events in Edinburgh
     </h3>
+    <!-- main content of events page -->
     <section id="events-outer">
         <div id="edfest" role="img" aria-label="People standing in theatre">
             <div id="to-do-fringe">
@@ -67,7 +70,7 @@
             </div>
         </div>
     </section>
-
+<!-- footer containing social media links -->
     <footer class="social-media">
         <h3>Catch us on social media for more info on events and offers</h3>
         <ul>
@@ -88,6 +91,7 @@
             </li>
         </ul>
     </footer>
+    <!-- fontawesome scripts -->
     <script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
 </body>
 
