--- a/travel.html
+++ b/travel.html
@@ -14,6 +14,7 @@
 <body>
     <section>
         <header>
+            <!-- navigation -->
             <nav>
                 <ul id="menu">
                     <li>
@@ -33,11 +34,13 @@
                     </li>
                 </ul>
             </nav>
+            <!-- website logo -->
             <a href="index.html" id="love-edinburgh">
                 <h1>Love Edinburgh</h1>
             </a>
         </header>
     </section>
+    <!-- main content of travel adivce page -->
     <section id="travel-outer">
         <div id="edin-travel" role="img"
             aria-label="Edinburgh view from princes street with pedestrians and bus in background">
@@ -61,6 +64,7 @@
 
         </div>
     </section>
+    <!-- footer containing social media links -->
     <footer class="social-media">
         <h3>Catch us on social media for more info on events and offers</h3>
         <ul>
@@ -81,6 +85,7 @@
             </li>
         </ul>
     </footer>
+    <!-- fontawesome scripts -->
     <script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
 </body>
 
