Image credits commented next to img or background element in html or css, respectively

--- a/eat.html
+++ b/eat.html
@@ -44,7 +44,9 @@
     <section>
         <h3 id="eat-heading">Food and drink in Edinburgh</h3>
         <div id="food-container">
+            <!-- image from https://www.pexels.com/photo/woman-in-silver-v-neck-long-sleeved-dress-3394310/ -->
             <img id="champagne-img" src="assets/images/champagne.jpg" alt="Girls drinking champagne on a night out">
+            <!-- image from https://www.pexels.com/photo/selective-focus-photo-of-oysters-ceramic-tray-3534584/ -->
             <img id="oysters-img" src="assets/images/oysters.jpg" alt="A platter of oysters served with lemon wedges">
         </div>
         <div id="food-text">
