Changes to content in footer element and addition of text to readme file

--- a/travel.html
+++ b/travel.html
@@ -66,21 +66,21 @@
     </section>
     <!-- footer containing social media links -->
     <footer class="social-media">
-        <h3>Catch us on social media for more info on events and offers</h3>
+        <h3>Connect with us and join the Edinburgh community!</h3>
         <ul>
             <li>
                 <a href="http://facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our facebook page (opens in a new tab)">
+                    aria-label="Visit the Love Edinburgh facebook page (opens in a new tab)">
                     <i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
                 <a href="http://twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our twitter page (opens in a new tab)">
+                    aria-label="Visit the Love Edinburgh twitter page (opens in a new tab)">
                     <i class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li>
                 <a href="http://instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our instagram page (opens in a new tab)">
+                    aria-label="Visit the Love Edinburgh instagram page (opens in a new tab)">
                     <i class="fa-brands fa-square-instagram"></i></a>
             </li>
         </ul>
