Made improvements to responsive design and navigation bar code

--- a/eat.html
+++ b/eat.html
@@ -16,28 +16,28 @@
     <section>
         <header>
             <nav>
-                <ul id="menu">
-                    <li>
-                        <a href="newsletter.html">Newsletter</a>
-                    </li>
-                    <li>
-                        <a href="travel.html">Travel advice</a>
-                    </li>
-                    <li>
-                        <a href="eat.html">Eat+Drink</a>
-                    </li>
-                    <li>
-                        <a href="todo.html">Events</a>
-                    </li>
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                </ul>
+                    <ul id="menu">
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="events.html">Events</a>
+                        </li>
+                        <li>
+                            <a href="eat.html">Eat+Drink</a>
+                        </li>
+                        <li>
+                            <a href="travel.html">Travel advice</a>
+                        </li>
+                        <li>
+                            <a href="newsletter.html">Newsletter</a>
+                        </li>
+                    </ul>
             </nav>
-            <!-- website logo -->
-            <a href="index.html" id="love-edinburgh">
-                <h1>Love Edinburgh</h1>
-            </a>
+             <!-- website logo -->
+    <a href="index.html" id="love-edinburgh">
+        <h1>Love Edinburgh</h1>
+    </a>
         </header>
     </section>
 <!-- main content of eat+drink page -->
