--- a/travel.html
+++ b/travel.html
@@ -18,19 +18,19 @@
             <nav>
                 <ul id="menu">
                     <li>
-                        <a href="newsletter.html">Newsletter</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="travel.html">Travel advice</a>
+                        <a href="events.html">Events</a>
                     </li>
                     <li>
                         <a href="eat.html">Eat+Drink</a>
                     </li>
                     <li>
-                        <a href="todo.html">Events</a>
+                        <a href="travel.html">Travel advice</a>
                     </li>
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="newsletter.html">Newsletter</a>
                     </li>
                 </ul>
             </nav>
