Addition of different font styles from Google Fonts in CSS file

--- a/events.html
+++ b/events.html
@@ -21,7 +21,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="events.html">Events</a>
+                        <a href="events.html" class="active">Events</a>
                     </li>
                     <li>
                         <a href="eat.html">Eat+Drink</a>
