Added div element around header element and individual div's around logo and nav bar to improve positioning

--- a/eat.html
+++ b/eat.html
@@ -12,43 +12,47 @@
 </head>
 
 <body>
-    <!-- navigation -->
-    <section>
-        <header>
+    <header>
+        <div id="nav-logo">
+               <!-- website logo and associated container -->
+            <div id="logo-container">
+                <a href="index.html" id="logo">
+                    <h1>Love Edinburgh</h1>
+                </a>
+            </div>
+            <!-- navigation bar and associated container -->
+          <div id="menu-container">
             <nav>
-                    <ul id="menu">
-                        <li>
-                            <a href="index.html">Home</a>
-                        </li>
-                        <li>
-                            <a href="events.html">Events</a>
-                        </li>
-                        <li>
-                            <a href="eat.html">Eat+Drink</a>
-                        </li>
-                        <li>
-                            <a href="travel.html">Travel advice</a>
-                        </li>
-                        <li>
-                            <a href="newsletter.html">Newsletter</a>
-                        </li>
-                    </ul>
+                <ul id="menu">
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="events.html">Events</a>
+                    </li>
+                    <li>
+                        <a href="eat.html">Eat+Drink</a>
+                    </li>
+                    <li>
+                        <a href="travel.html">Travel advice</a>
+                    </li>
+                    <li>
+                        <a href="newsletter.html">Newsletter</a>
+                    </li>
+                </ul>
             </nav>
-             <!-- website logo -->
-    <a href="index.html" id="love-edinburgh">
-        <h1>Love Edinburgh</h1>
-    </a>
+          </div>
+        </div>
         </header>
-    </section>
 <!-- main content of eat+drink page -->
     <section>
-        <h2 id="eat-heading">Food and drink in Edinburgh</h2>
-        <div id="food-container">
-            <!-- image from https://www.pexels.com/photo/woman-in-silver-v-neck-long-sleeved-dress-3394310/ -->
-            <img id="champagne-img" src="assets/images/champagne.jpg" alt="Girls drinking champagne on a night out">
+        <h2 id="eat-heading">Food and drink in Edinburgh</h2> 
+       <div id="food-container">
+            <!-- image from https://www.pexels.com/photo/woman-in-silver-v-neck-long-sleeved-dress-3394310/  -->
+             <img id="champagne-img" src="assets/images/champagne.jpg" alt="Girls drinking champagne on a night out"> 
             <!-- image from https://www.pexels.com/photo/selective-focus-photo-of-oysters-ceramic-tray-3534584/ -->
-            <img id="oysters-img" src="assets/images/oysters.jpg" alt="A platter of oysters served with lemon wedges">
-        </div>
+            <img id="oysters-img" src="assets/images/oysters.jpg" alt="A platter of oysters served with lemon wedges"> 
+        </div> 
         <div id="food-text">
             <h3>The Ship on the Shore</h3>
             <p>The Ship on the Shore offers the best of Scottish seafood. It has an excellent wine and champagne
