--- a/events.html
+++ b/events.html
@@ -12,16 +12,23 @@
 </head>
 
 <body>
-    <section>
-        <header>
-            <!-- navigation -->
+    <header>
+        <div id="nav-logo">
+               <!-- website logo and associated container -->
+            <div id="logo-container">
+                <a href="index.html" id="logo">
+                    <h1>Love Edinburgh</h1>
+                </a>
+            </div>
+            <!-- navigation bar and associated container -->
+          <div id="menu-container">
             <nav>
                 <ul id="menu">
                     <li>
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="events.html" class="active">Events</a>
+                        <a href="events.html">Events</a>
                     </li>
                     <li>
                         <a href="eat.html">Eat+Drink</a>
@@ -34,12 +41,9 @@
                     </li>
                 </ul>
             </nav>
-            <!-- website logo -->
-            <a href="index.html" id="love-edinburgh">
-                <h1>Love Edinburgh</h1>
-            </a>
+          </div>
+        </div>
         </header>
-    </section>
     <h2 id="events-heading">
         Events in Edinburgh
     </h2>
