--- a/newsletter.html
+++ b/newsletter.html
@@ -12,9 +12,16 @@
 </head>
 
 <body>
-    <!-- navigation -->
-    <section>
-        <header>
+    <header>
+        <div id="nav-logo">
+               <!-- website logo and associated container -->
+            <div id="logo-container">
+                <a href="index.html" id="logo">
+                    <h1>Love Edinburgh</h1>
+                </a>
+            </div>
+            <!-- navigation bar and associated container -->
+          <div id="menu-container">
             <nav>
                 <ul id="menu">
                     <li>
@@ -27,19 +34,16 @@
                         <a href="eat.html">Eat+Drink</a>
                     </li>
                     <li>
-                        <a href="travel.html">Travel advice</a>
+                        <a href="travel.html">Travel Advice</a>
                     </li>
                     <li>
                         <a href="newsletter.html">Newsletter</a>
                     </li>
                 </ul>
             </nav>
-            <!-- website logo -->
-            <a href="index.html" id="love-edinburgh">
-                <h1>Love Edinburgh</h1>
-            </a>
+          </div>
+        </div>
         </header>
-    </section>
     <!-- newsletter sign up form -->
     <section>
         <div id="form-image" role="img" aria-label="View of concernt stage from the perspective of a member of the audience">
