--- a/travel.html
+++ b/travel.html
@@ -12,9 +12,16 @@
 </head>
 
 <body>
-    <section>
-        <header>
-            <!-- navigation -->
+    <header>
+        <div id="nav-logo">
+               <!-- website logo and associated container -->
+            <div id="logo-container">
+                <a href="index.html" id="logo">
+                    <h1>Love Edinburgh</h1>
+                </a>
+            </div>
+            <!-- navigation bar and associated container -->
+          <div id="menu-container">
             <nav>
                 <ul id="menu">
                     <li>
@@ -34,12 +41,10 @@
                     </li>
                 </ul>
             </nav>
-            <!-- website logo -->
-            <a href="index.html" id="love-edinburgh">
-                <h1>Love Edinburgh</h1>
-            </a>
+          </div>
+        </div>
         </header>
-    </section>
+       
     <!-- main content of travel adivce page -->
     <section id="travel-outer">
         <div id="edin-travel" role="img"
