--- a/index.html
+++ b/index.html
@@ -12,34 +12,38 @@
 </head>
 
 <body>
-    <section>
-        <header>
-            <!-- navigation -->
-            <nav>
-                <ul id="menu">
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="events.html">Events</a>
-                    </li>
-                    <li>
-                        <a href="eat.html">Eat+Drink</a>
-                    </li>
-                    <li>
-                        <a href="travel.html">Travel advice</a>
-                    </li>
-                    <li>
-                        <a href="newsletter.html">Newsletter</a>
-                    </li>
-                </ul>
-            </nav>
-            <!-- website logo -->
-            <a href="index.html" id="love-edinburgh">
-                <h1>Love Edinburgh</h1>
-            </a>
-        </header>
-    </section>
+    <header>
+<div id="nav-logo">
+       <!-- website logo and associated container -->
+    <div id="logo-container">
+        <a href="index.html" id="logo">
+            <h1>Love Edinburgh</h1>
+        </a>
+    </div>
+    <!-- navigation bar and associated container -->
+  <div id="menu-container">
+    <nav>
+        <ul id="menu">
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="events.html">Events</a>
+            </li>
+            <li>
+                <a href="eat.html">Eat+Drink</a>
+            </li>
+            <li>
+                <a href="travel.html">Travel advice</a>
+            </li>
+            <li>
+                <a href="newsletter.html">Newsletter</a>
+            </li>
+        </ul>
+    </nav>
+  </div>
+</div>
+</header>
     <!-- main content of home page -->
     <section id="hero-outer">
         <div id="hero-image" role="img" aria-label="View of Edinburgh with clock tower in sight">
