Changes to responsive code so header looks better on smaller devices

--- a/eat.html
+++ b/eat.html
@@ -34,7 +34,7 @@
                         <a href="eat.html">Eat+Drink</a>
                     </li>
                     <li>
-                        <a href="travel.html">Travel advice</a>
+                        <a href="travel.html">Travel</a>
                     </li>
                     <li>
                         <a href="newsletter.html">Newsletter</a>
@@ -46,14 +46,14 @@
         </header>
 <!-- main content of eat+drink page -->
     <section>
-        <h2 id="eat-heading">Food and drink in Edinburgh</h2> 
-       <div id="food-container">
+        <!-- <h2 id="eat-heading">Food and drink in Edinburgh</h2>  -->
+       <div id="eat-container">
             <!-- image from https://www.pexels.com/photo/woman-in-silver-v-neck-long-sleeved-dress-3394310/  -->
              <img id="champagne-img" src="assets/images/champagne.jpg" alt="Girls drinking champagne on a night out"> 
             <!-- image from https://www.pexels.com/photo/selective-focus-photo-of-oysters-ceramic-tray-3534584/ -->
             <img id="oysters-img" src="assets/images/oysters.jpg" alt="A platter of oysters served with lemon wedges"> 
         </div> 
-        <div id="food-text">
+        <div id="eat-text">
             <h3>The Ship on the Shore</h3>
             <p>The Ship on the Shore offers the best of Scottish seafood. It has an excellent wine and champagne
                 selection so you can enjoy a glass with your oysters by the water.</p>
