--- a/travel.html
+++ b/travel.html
@@ -34,7 +34,7 @@
                         <a href="eat.html">Eat+Drink</a>
                     </li>
                     <li>
-                        <a href="travel.html">Travel advice</a>
+                        <a href="travel.html">Travel</a>
                     </li>
                     <li>
                         <a href="newsletter.html">Newsletter</a>
@@ -49,10 +49,10 @@
     <section id="travel-outer">
         <div id="edin-travel" role="img"
             aria-label="Edinburgh view from princes street with pedestrians and bus in background">
-            <div id="travel-div">
+            <div id="travel-container">
                 <div id="travel-text">
                     <h2>Edinburgh Travel Advice</h2>
-                    <h3>To Edinburgh</h3>
+                    <h3>Travelling to Edinburgh</h3>
                     <p>Edinburgh airport hosts many international flights. Getting from the airport to the city centre
                         is easy - you can choose from the 100 bus or take the tram straight from the airport. It only
                         takes 20-40 minutes. Additionally, you can also travel from nearby Glasgow or if you want
