--- a/events.html
+++ b/events.html
@@ -34,7 +34,7 @@
                         <a href="eat.html">Eat+Drink</a>
                     </li>
                     <li>
-                        <a href="travel.html">Travel advice</a>
+                        <a href="travel.html">Travel</a>
                     </li>
                     <li>
                         <a href="newsletter.html">Newsletter</a>
@@ -44,9 +44,9 @@
           </div>
         </div>
         </header>
-    <h2 id="events-heading">
+    <!-- <h2 id="events-heading">
         Events in Edinburgh
-    </h2>
+    </h2> -->
     <!-- main content of events page -->
     <section id="events-outer">
         <div id="edfest" role="img" aria-label="People standing in theatre">
