--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="eat.html">Eat+Drink</a>
             </li>
             <li>
-                <a href="travel.html">Travel advice</a>
+                <a href="travel.html">Travel</a>
             </li>
             <li>
                 <a href="newsletter.html">Newsletter</a>
