--- a/newsletter.html
+++ b/newsletter.html
@@ -34,7 +34,7 @@
                         <a href="eat.html">Eat+Drink</a>
                     </li>
                     <li>
-                        <a href="travel.html">Travel Advice</a>
+                        <a href="travel.html">Travel</a>
                     </li>
                     <li>
                         <a href="newsletter.html">Newsletter</a>
@@ -64,7 +64,7 @@
                         <label for="email">Email address</label>
                         <input type="email" id="email" name="email" required>
                         <br>
-                        <input type="submit" value="Submit" class="signup-button">
+                        <input type="submit" value="Submit" id="signup-button">
                     </div>
 
                 </form>
