--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="travel.html">Travel</a>
             </li>
             <li>
-                <a href="newsletter.html">Newsletter</a>
+                <a href="newsletter.html">Signup</a>
             </li>
         </ul>
     </nav>
