Edited code to make sure it is concise in main and responsive css code

--- a/events.html
+++ b/events.html
@@ -37,7 +37,7 @@
                         <a href="travel.html">Travel</a>
                     </li>
                     <li>
-                        <a href="newsletter.html">Newsletter</a>
+                        <a href="newsletter.html">Signup</a>
                     </li>
                 </ul>
             </nav>
@@ -49,25 +49,25 @@
     </h2> -->
     <!-- main content of events page -->
     <section id="events-outer">
-        <div id="edfest" role="img" aria-label="People standing in theatre">
+        <div id="events-background" role="img" aria-label="People standing in theatre">
             <div id="events-fringe">
-                <h3>Edinburgh Festival Fringe</h3>
+                <h2>Edinburgh Festival Fringe</h2>
                 <p>Edinburgh Festival Fringe happens every August and hosts a wealth of theatre, comedy and circus
                     performances. The city is full of creative energy every August where performers and tourists travels
                     all over the world to perform or see over 4000 plus shows in the city.</p>
             </div>
             <div id="events-film">
-                <h3>Edinburgh International Film Festival</h3>
+                <h2>Edinburgh International Film Festival</h2>
                 <p>Edinburgh International Film Festival happens every August and hosts a wealth of avante garde films
                     from independent film makers. It's a must see!</p>
             </div>
             <div id="events-book">
-                <h3>Edinburgh International Book Festival</h3>
+                <h2>Edinburgh International Book Festival</h2>
                 <p>Edinburgh International Book Festival happens every year where writers and literary lovers descend on
                     the city and promote and share their literature. A must go for avid readers!</p>
             </div>
             <div id="events-music">
-                <h3>Edinburgh music festivals</h3>
+                <h2>Edinburgh music festivals</h2>
                 <p>Edinburgh hosts a number of music festivals to provide for all your music needs. If you enjoy pop and
                     rock music head to the Connect festival. If you are a dance music lover why not check out Terminal V
                     at the Royal Highland Centre.</p>
