--- a/newsletter.html
+++ b/newsletter.html
@@ -37,7 +37,7 @@
                         <a href="travel.html">Travel</a>
                     </li>
                     <li>
-                        <a href="newsletter.html">Newsletter</a>
+                        <a href="newsletter.html">Signup</a>
                     </li>
                 </ul>
             </nav>
@@ -49,9 +49,9 @@
         <div id="form-image" role="img" aria-label="View of concernt stage from the perspective of a member of the audience">
             <div id="form-text-container">
                 <form method="POST" action="https://formdump.codeinstitute.net/">
-                    <div id="form-heading">
-                        <h4>Sign up to our newsletter for weekly updates on events and resturant offers in Edinburgh
-                        </h4>
+                    <div>
+                        <h2>Sign up to our newsletter for weekly updates on events and resturant offers in Edinburgh
+                        </h2>
                     </div>
                     <br>
                     <div id="newsletter-form">
