--- a/travel.html
+++ b/travel.html
@@ -37,7 +37,7 @@
                         <a href="travel.html">Travel</a>
                     </li>
                     <li>
-                        <a href="newsletter.html">Newsletter</a>
+                        <a href="newsletter.html">Signup</a>
                     </li>
                 </ul>
             </nav>
@@ -51,14 +51,13 @@
             aria-label="Edinburgh view from princes street with pedestrians and bus in background">
             <div id="travel-container">
                 <div id="travel-text">
-                    <h2>Edinburgh Travel Advice</h2>
-                    <h3>Travelling to Edinburgh</h3>
+                    <h2>Travelling to Edinburgh</h2>
                     <p>Edinburgh airport hosts many international flights. Getting from the airport to the city centre
                         is easy - you can choose from the 100 bus or take the tram straight from the airport. It only
                         takes 20-40 minutes. Additionally, you can also travel from nearby Glasgow or if you want
                         cheaper flight options we'd recommend travelling from Glasgow Prestwick airport. There are many
                         train services from Glasgow to Edinburgh.</p>
-                    <h3>Travelling within Edinburgh</h3>
+                    <h2>Travelling within Edinburgh</h2>
                     <p>There are many bus services within Edinburgh taking you all across the city and beyond. You can
                         get travel between the south and north of Edinburgh via the 49 or 14 buses from Waverley
                         station. You can travel to the south to the west via the 47 bus or north to east using the 12
