--- a/eat.html
+++ b/eat.html
@@ -37,7 +37,7 @@
                         <a href="travel.html">Travel</a>
                     </li>
                     <li>
-                        <a href="newsletter.html">Newsletter</a>
+                        <a href="newsletter.html">Signup</a>
                     </li>
                 </ul>
             </nav>
@@ -54,16 +54,16 @@
             <img id="oysters-img" src="assets/images/oysters.jpg" alt="A platter of oysters served with lemon wedges"> 
         </div> 
         <div id="eat-text">
-            <h3>The Ship on the Shore</h3>
+            <h2>The Ship on the Shore</h2>
             <p>The Ship on the Shore offers the best of Scottish seafood. It has an excellent wine and champagne
                 selection so you can enjoy a glass with your oysters by the water.</p>
-            <h3>The Dragonfly</h3>
+            <h2>The Dragonfly</h2>
             <p>Fancy a cocktail? Why not head down to The Dragonfly which serves many of the old classics such as
                 espresso martini or novelities such as rum cocktails topped with italian meringue.</p>
-            <h3>Mother India</h3>
+            <h2>Mother India</h2>
             <p>Mother India is an old favourite for Edinburgh locals and tourists located in the Newington area of
                 Edinburgh. It offers many favourite indian dishes in small plates so everyone can share.</p>
-            <h3>Kampong Ah Lee</h3>
+            <h2>Kampong Ah Lee</h2>
             <p>Another favourite for Edinburgh locals - offering delicous malaysian food including roti canai and laska
                 soup. This resturant also sports an extensive bubble tea menu. Like Mother India, this wee gem is
                 located in the Newington area of Edinburgh.</p>
