Addition of underline of active page in navigation bar

--- a/eat.html
+++ b/eat.html
@@ -31,7 +31,7 @@
                         <a href="events.html">Events</a>
                     </li>
                     <li>
-                        <a href="eat.html">Eat+Drink</a>
+                        <a href="eat.html" class="active">Eat+Drink</a>
                     </li>
                     <li>
                         <a href="travel.html">Travel</a>
