--- a/events.html
+++ b/events.html
@@ -28,7 +28,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="events.html">Events</a>
+                        <a href="events.html" class="active">Events</a>
                     </li>
                     <li>
                         <a href="eat.html">Eat+Drink</a>
@@ -44,9 +44,6 @@
           </div>
         </div>
         </header>
-    <!-- <h2 id="events-heading">
-        Events in Edinburgh
-    </h2> -->
     <!-- main content of events page -->
     <section id="events-outer">
         <div id="events-background" role="img" aria-label="People standing in theatre">
