--- a/newsletter.html
+++ b/newsletter.html
@@ -37,7 +37,7 @@
                         <a href="travel.html">Travel</a>
                     </li>
                     <li>
-                        <a href="newsletter.html">Signup</a>
+                        <a href="newsletter.html" class="active">Signup</a>
                     </li>
                 </ul>
             </nav>
