--- a/travel.html
+++ b/travel.html
@@ -34,7 +34,7 @@
                         <a href="eat.html">Eat+Drink</a>
                     </li>
                     <li>
-                        <a href="travel.html">Travel</a>
+                        <a href="travel.html" class="active">Travel</a>
                     </li>
                     <li>
                         <a href="newsletter.html">Signup</a>
